WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110801
Threaded HTML parser fails fast/loader/stateobjects/state-attribute-history-getter.html
https://bugs.webkit.org/show_bug.cgi?id=110801
Summary
Threaded HTML parser fails fast/loader/stateobjects/state-attribute-history-g...
Adam Barth
Reported
2013-02-25 14:21:51 PST
fast/loader/stateobjects/state-attribute-history-getter.html times out and shouldn't!
Attachments
Patch
(2.28 KB, patch)
2013-02-25 17:35 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2013-02-25 14:26:48 PST
Reduction: <!DOCTYPE html> <script> testRunner.dumpAsText(); testRunner.waitUntilDone(); history.pushState(42, "", ""); window.onpopstate = function(e) { testRunner.notifyDone(); } history.back(); </script>
Eric Seidel (no email)
Comment 2
2013-02-25 17:35:10 PST
Created
attachment 190165
[details]
Patch
Adam Barth
Comment 3
2013-02-25 17:36:42 PST
Comment on
attachment 190165
[details]
Patch This patch is ridiculous, but I think this makes sense to emulate the quirks of the main thread parser as closely as possible. We'll likely rip this out when we re-write the loader.
Eric Seidel (no email)
Comment 4
2013-02-26 01:59:19 PST
Comment on
attachment 190165
[details]
Patch Clearing flags on attachment: 190165 Committed
r144027
: <
http://trac.webkit.org/changeset/144027
>
Eric Seidel (no email)
Comment 5
2013-02-26 01:59:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug