Threaded HTML parser fails fast/loader/stateobjects/state-attribute-history-getter.html https://bugs.webkit.org/show_bug.cgi?id=110801

Reviewed by Adam Barth.

This causes 6 more tests to pass for the threaded parser,
an solves all of our timeout issues.

These tests which were failing were racy, we just were never
hitting the race due to using file urls.  This change fixes
the threaded parser to emulate one more of the EOF quirks from
the loader/main-thread-parser interaction.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::processParsedChunkFromBackgroundParser):

Canonical link: https://commits.webkit.org/129130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144027 268f45cc-cd09-0410-ab3c-d52691b4dbfc